fix: phase all itterator

--- a/src/docs/2_Жизненный цикл.md
+++ b/src/docs/2_Жизненный цикл.md
@@ -17,4 +17,4 @@
 4. Для каждого совпадения находятся все фазы (Phase), которые слушают этот путь.
 5. Каждая нода помечается как dirty в контексте этих фаз.
 6. Планировщик (Scheduler) решает, когда эти фазы будут исполнены (сразу или в батче).
-7. Когда приходит время, фаза обходит все свои dirty-ноды и вызывает для каждой executor с контекстом (PhaseExecutorContext), содержащим ноду и событие (PhaseEvent) с путём и параметрами.
+7. Когда приходит время, фаза обходит все свои dirty-ноды и вызывает для каждой each с контекстом (PhaseExecutorContext), содержащим ноду и событие (PhaseEvent) с путём и параметрами.
